Drivers not updating for nodes in node groups when created through python until dependencies manually updated #83497

Closed
opened 2020-12-07 12:02:41 +01:00 by Ethan Simon · 8 comments

System Information
Operating system: Windows-10-10.0.19041-SP0 64 Bits
Graphics card: GeForce GTX 1080/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 457.30

Blender Version
Broken: version: 2.91.0, branch: master, commit date: 2020-11-25 08:34, hash: 0f45cab862

Short description of error
So it seems that drivers don't update in node groups made with python until you update the dependencies manually. Drivers created on nodes with python on the material level work just fine without manual dependency updates.

What I have tried to circumvent the issue that have not worked:

1: Updating depsgraph
2: Changing node values after creating drivers (in code)

Exact steps for others to reproduce the error
#83497.blend

  • Open file
  • Run script in text editor
  • In 3D view side panel click on Create Node Group
  • In material node editor add node group and tab into it

In 3D view side panel click on Toggle Me button

Driven value of node should update. If node is created in material node tree itself it works as expected.

**System Information** Operating system: Windows-10-10.0.19041-SP0 64 Bits Graphics card: GeForce GTX 1080/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 457.30 **Blender Version** Broken: version: 2.91.0, branch: master, commit date: 2020-11-25 08:34, hash: `0f45cab862` **Short description of error** So it seems that drivers don't update in node groups made with python until you update the dependencies manually. Drivers created on nodes with python on the material level work just fine without manual dependency updates. What I have tried to circumvent the issue that have not worked: 1: Updating depsgraph 2: Changing node values after creating drivers (in code) **Exact steps for others to reproduce the error** [#83497.blend](https://archive.blender.org/developer/F9502438/T83497.blend) - Open file - Run script in text editor - In 3D view side panel click on Create Node Group - In material node editor add node group and tab into it # In 3D view side panel click on Toggle Me button Driven value of node should update. If node is created in material node tree itself it works as expected.
Author

Added subscriber: @razed

Added subscriber: @razed

Added subscriber: @iss

Added subscriber: @iss

Changed status from 'Needs Triage' to: 'Needs User Info'

Changed status from 'Needs Triage' to: 'Needs User Info'

I can't see "toggle me" property. Where it should be exactly?

I can't see "toggle me" property. Where it should be exactly?
Author

@iss Oh, sorry. It should be contained within the N panel ui that the script creates. I was going to make it just a search command but then the property wouldnt be accessible without going into the data in the outliner :)

@iss Oh, sorry. It should be contained within the N panel ui that the script creates. I was going to make it just a search command but then the property wouldnt be accessible without going into the data in the outliner :)

Changed status from 'Needs User Info' to: 'Confirmed'

Changed status from 'Needs User Info' to: 'Confirmed'

This issue was referenced by c26f46cb95

This issue was referenced by c26f46cb9521c4d3603a5502dce0fd8444fbe408
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Jacques Lucke self-assigned this 2021-01-07 13:31:49 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset System
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Viewport & EEVEE
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Asset Browser Project
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Module
Viewport & EEVEE
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Severity
High
Severity
Low
Severity
Normal
Severity
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#83497
No description provided.